Fixes for tabbed content on small screens Update to separator padding sizes

--- a/sass/kiss/modules/_hero-header.scss
+++ b/sass/kiss/modules/_hero-header.scss
@@ -95,7 +95,6 @@
 		height: 100%;
 		min-height: inherit;
 		width: 100%;
-		transition: 1s ease-in all;
 		@include media-breakpoint-up(xs){
 			padding-top: 74px;
 		}
